cursive-bootstrap/tests/ui/E-CON/E-CON-0261.cursive
// RUN: compile-fail
// DIAG: E-CON-0261
// SPEC: 8.9
// DESC: race arms have incompatible types

procedure a() -> Future<i32> {
    return 1
}

procedure b() -> Future<i32> {
    return 2
}

procedure race_types() -> i32 {
    return race {  //~ ERROR E-CON-0261: race incompatible types
        a() -> |v| v,
        b() -> |v|  hello
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
